k8s-deployment/rook/cluster.yaml
# https://github.com/rook/rook/blob/master/cluster/examples/kubernetes/ceph/cluster.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
